crates/sui/tests/snapshots/shell_tests__with_network__source_verification_deprecation__both_flags.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/with_network/source_verification_deprecation/both_flags.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# test that we get an error if we supply both `--skip-dependency-verification` and `--verify-deps`


sui client --client.config $CONFIG publish example --skip-dependency-verification --verify-deps

----- results -----
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the argument '--skip-dependency-verification' cannot be used with '--verify-deps'

Usage: sui client publish --skip-dependency-verification <package_path>

For more information, try '--help'.
